crates/murphy-plugin-macros/tests/ui/fail_node_pattern_atom_node_match.stderr
error: node_pattern!: atom kind `int` cannot be matched as `(int ...)` — use literal `5` or bare kind name `int`
 --> tests/ui/fail_node_pattern_atom_node_match.rs:4:1
  |
4 | murphy_plugin_macros::node_pattern!(m, "(int 5)");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `murphy_plugin_macros::node_pattern` (in Nightly builds, run with -Z macro-backtrace for more info)
